--- a/14.4/index.html
+++ b/14.4/index.html
@@ -6,24 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Skillfactory 14.4</title>
+    <title>Skillfactory 14.3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container mt-5 col-4">
         <form name="numForm">
             <div class="form-group">
-                <label>Input number from 1️⃣ to 🔟:</label>
-                <input type="number" name="inputNum" class="form-control">
-                <small class="form-text text-muted">Input value from 1 to 10 to get image</small>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">width</span>
+                    </div>
+                    <input type="text" class="form-control" name="width">
+                    <div class="input-group-append">
+                        <span class="input-group-text">px</span>
+                    </div>
+                </div>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">height</span>
+                    </div>
+                    <input type="text" class="form-control" name="height">
+                    <div class="input-group-append">
+                        <span class="input-group-text">px</span>
+                    </div>
+                </div>
             </div>
             <button type="submit" class="btn btn-outline-primary">Submit</button>
             <div class="alert alert-danger mt-3 isHidden alert" role="alert">
                 Value is out of range 🤷‍♂️
             </div>
         </form>
-        <div class="spinner-border mt-4 isHidden" role="status"> </div>
         <div id="imageDiv" class="isHidden">
         </div>
     </div>
